# Projet_TETRAVEX

./: Backtracking.cpp  Backtracking.h  Backtracking.h.gch  Board.cpp  Board.h  CMakeLists.txt  Card.cpp  Card.h  Game.cpp  Game.h  README.md  SequentialBacktracking.cpp  SequentialBacktracking.h  SequentialBacktracking.h.gch  Solver.cpp  Solver.h  ThreadParallelismBacktracking.cpp  ThreadParallelismBacktracking.h  ThreadParallelismBacktracking.h.gch  ThreadPool.cpp  ThreadPool.h  ThreadPoolBacktracking.cpp  ThreadPoolBacktracking.h  ThreadPoolBacktracking.h.gch  a.out  main  main.cpp
